# The-Powder-Toy

./: .gitattributes  .gitignore  README.md  SConscript  TODO.txt  changelog.txt  fonttool.py  meson.build  meson_options.txt  modelement.py  newelement.py  vsproject.py
.github/: build.sh  get-release-info.sh  get-type.py  starcatcher-publish.sh
.github/workflows/: build.yaml
Wiki/circuits/: known-bugs.md  solving-method.md
Wiki/editors/: bctr.html
Wiki/editors/css/: main.css
Wiki/elements/: ALMN.md  AMNA.md  ANH2.md  APRT.md  AQRG.md  BALI.md  BRNZ.md  BSMH.md  BULT.md  CBMB.md  CLUD.md  CRBN.md  CRNM.md  FILL.md  ION.md  IRDM.md  JCB1.md  N2.md  NEON.md  PHSP.md  POSI.md  PTNM.md  RADN.md  RCRT.md  RDMD.md  RGEL.md  ROCK.md  THOR.md  TIN.md  gol.md  hidden-elements.md  minor-elements.md  organic.md  random-elements.md
Wiki/elements/electromagnetic/: CPTR.md  GRND.md  INDC.md  JUNC.md  LEAD.md  RSTR.md  TMRM.md  TRST.md  VOLT.md  electronic-components.md
Wiki/elements/electronics/: CSNS.md  ERAY.md  EXFN.md  FIBR.md  NOTE.md  PDTC.md  PFLT.md  QLOG.md  SHRD.md  SLCN.md  TIME.md  TRBN.md
Wiki/elements/organic/: ANT.md  BCTR.md  BEE.md  BIRD.md  BLOD.md  FISH.md  FLSH.md  SEED.md  SPDR.md  STMH.md  UDDR.md  organic.md
Wiki/elements/vehicles/: CYTK.md  GNSH.md  HRSE.md  TANK.md
Wiki/modding/: adding-new-menus.md  embedding-scripts.md
Wiki/tools/: CNFG.md  DECO.md  EROD.md  NORM.md  PRP2.md  ROT.md  RULR.md  SIGN.md  TEXT.md  TRFM.md  tools.md
Wiki/walls/: FARADAY.md  IWALL.md  ONEWAY.md
data/: IntroText.h  Shaders.h  font.cpp  hmap.cpp  hmap.h  icon.cpp  icon.h  icondoc.h  images.cpp  images.h  meson.build
extra/: Draft1.net  Draft1.op.raw  Draft1.raw  RotateTool.cpp  ScaleTool.cpp  circuit-test.asc  convert-elements.py  image-out.txt  piano-bad-apple.lua  piano-broken-moon.lua  print-generator.py
extra/circuits-backup/: RSPK.cpp  VOLT.cpp
extra/font/: font.cpp  font.h
pch/: pch_cpp.h
resources/: font.bz2  meson.build  powder-res.rc  powder.appdata.xml  powder.desktop  powder.man  powdertoy-save.xml  resource.h
resources/icon/: icontofile.py
src/: Activity.h  Config.h  Config.template.h  Controller.h  Format.cpp  Format.h  Misc.cpp  Misc.h  Platform.cpp  Platform.h  PowderToy.h  PowderToyFontEditor.cpp  PowderToyRenderer.cpp  PowderToySDL.cpp  Probability.cpp  Probability.h  SDLCompat.cpp  SDLCompat.h  Update.cpp  Update.h  meson.build
src/bson/: BSON.cpp  BSON.h  meson.build
src/bzip2/: bz2wrap.cpp  bz2wrap.h  meson.build
src/client/: Client.cpp  Client.h  ClientListener.h  GameSave.cpp  GameSave.h  MD5.cpp  MD5.h  SaveFile.cpp  SaveFile.h  SaveInfo.cpp  SaveInfo.h  ThumbnailRendererTask.cpp  ThumbnailRendererTask.h  User.h  UserInfo.h  meson.build
src/client/http/: APIRequest.cpp  APIRequest.h  AvatarRequest.cpp  AvatarRequest.h  GetUserInfoRequest.cpp  GetUserInfoRequest.h  ImageRequest.cpp  ImageRequest.h  Request.cpp  Request.h  RequestManager.cpp  RequestManager.h  RequestMonitor.h  SaveUserInfoRequest.cpp  SaveUserInfoRequest.h  ThumbnailRequest.cpp  ThumbnailRequest.h  meson.build
src/common/: Format.h  Singleton.h  String.cpp  String.h  macosx.h  meson.build  tpt-compat.h  tpt-inline.h  tpt-minmax.h  tpt-rand.cpp  tpt-rand.h
src/config/: meson.build
src/debug/: DebugInfo.h  DebugLines.cpp  DebugLines.h  DebugParts.cpp  DebugParts.h  ElementPopulation.cpp  ElementPopulation.h  ParticleDebug.cpp  ParticleDebug.h  meson.build
src/graphics/: DrawMethodsDef.inc  FontReader.cpp  FontReader.h  Graphics.cpp  Graphics.h  Icons.h  OpenGLDrawMethods.inl  OpenGLGraphics.cpp  OpenGLHeaders.h  Pixel.h  RasterDrawMethods.inl  RasterGraphics.cpp  Renderer.cpp  Renderer.h  meson.build
src/gui/: Style.cpp  Style.h  meson.build
src/json/: json-forwards.h  json.h  jsoncpp.cpp  meson.build
src/lua/: CommandInterface.cpp  CommandInterface.h  LegacyLuaAPI.cpp  LuaBit.cpp  LuaBit.h  LuaButton.cpp  LuaButton.h  LuaCheckbox.cpp  LuaCheckbox.h  LuaCompat.c  LuaCompat.h  LuaComponent.cpp  LuaComponent.h  LuaEvents.cpp  LuaEvents.h  LuaLabel.cpp  LuaLabel.h  LuaLuna.h  LuaProgressBar.cpp  LuaProgressBar.h  LuaScriptHelper.h  LuaScriptInterface.cpp  LuaScriptInterface.h  LuaSimulation.cpp  LuaSlider.cpp  LuaSlider.h  LuaSmartRef.cpp  LuaSmartRef.h  LuaTextbox.cpp  LuaTextbox.h  LuaWindow.cpp  LuaWindow.h  TPTSTypes.cpp  TPTSTypes.h  TPTScriptInterface.cpp  TPTScriptInterface.h  meson.build
src/music/: audio.cpp  audio.h  meson.build  music.cpp  music.h
src/resampler/: meson.build  resampler.cpp  resampler.h
src/simulation/: Air.cpp  Air.h  BuiltinGOL.h  CoordStack.h  Element.cpp  Element.h  ElementClasses.cpp  ElementClasses.h  ElementCommon.h  ElementDefs.h  ElementGraphics.h  ElementNumbers.h  ElementNumbers.template.h  GOLString.cpp  GOLString.h  Gravity.cpp  Gravity.h  MenuSection.h  Particle.cpp  Particle.h  Sample.h  SaveRenderer.cpp  SaveRenderer.h  Sign.cpp  Sign.h  SimTool.cpp  SimTool.h  Simulation.cpp  Simulation.h  SimulationData.cpp  SimulationData.h  Snapshot.h  Spaceship.cpp  Spaceship.h  Stasis.cpp  Stasis.h  Stickman.h  StorageClasses.h  StructProperty.h  ToolClasses.cpp  (+6 more)
src/simulation/elements/: 009.cpp  009G.cpp  009S.cpp  ACEL.cpp  ACID.cpp  ACOL.cpp  AERO.cpp  ALGE.cpp  ALMN.cpp  AMNA.cpp  AMTR.cpp  ANAR.cpp  ANH2.cpp  ANT.cpp  APRT.cpp  AQRG.cpp  ARAY.cpp  ASPK.cpp  BACL.cpp  BAKS.cpp  BALI.cpp  BANG.cpp  BCLN.cpp  BCOL.cpp  BCTR.cpp  BEE.cpp  BGLA.cpp  BHOL.cpp  BIRD.cpp  BIZR.cpp  BIZRG.cpp  BIZRS.cpp  BJEL.cpp  BLOD.cpp  BMTL.cpp  BOMB.cpp  BOWR.cpp  BOYL.cpp  BRAS.cpp  BRAY.cpp  (+300 more)
src/tasks/: AbandonableTask.cpp  AbandonableTask.h  Task.cpp  Task.h  TaskListener.h  TaskWindow.cpp  TaskWindow.h  meson.build
subprojects/: .gitignore  tpt-libs-prebuilt-i686-win-msvc-dynamic-v20210409104352.wrap  tpt-libs-prebuilt-i686-win-msvc-static-v20210409104352.wrap  tpt-libs-prebuilt-x86_64-lin-gcc-static-v20210409104352.wrap  tpt-libs-prebuilt-x86_64-mac-gcc-static-v20210409104352.wrap  tpt-libs-prebuilt-x86_64-win-msvc-dynamic-v20210409104352.wrap  tpt-libs-prebuilt-x86_64-win-msvc-static-v20210409104352.wrap
(+307 files in other folders)
