MOD_ELEMENT_OFFSET = 192
simulation_elem_ids = [
	[ 'NONE',     0 ],
	[ 'DUST',     1 ],
	[ 'WATR',     2 ],
	[ 'OIL',      3 ],
	[ 'FIRE',     4 ],
	[ 'STNE',     5 ],
	[ 'LAVA',     6 ],
	[ 'GUNP',     7 ],
	[ 'NITR',     8 ],
	[ 'CLNE',     9 ],
	[ 'GAS',     10 ],
	[ 'PLEX',    11 ],
	[ 'GOO',     12 ],
	[ 'ICEI',    13 ],
	[ 'METL',    14 ],
	[ 'SPRK',    15 ],
	[ 'SNOW',    16 ],
	[ 'WOOD',    17 ],
	[ 'NEUT',    18 ],
	[ 'PLUT',    19 ],
	[ 'PLNT',    20 ],
	[ 'ACID',    21 ],
	[ 'VOID',    22 ],
	[ 'WTRV',    23 ],
	[ 'CNCT',    24 ],
	[ 'DSTW',    25 ],
	[ 'SALT',    26 ],
	[ 'SLTW',    27 ],
	[ 'DMND',    28 ],
	[ 'BMTL',    29 ],
	[ 'BRMT',    30 ],
	[ 'PHOT',    31 ],
	[ 'URAN',    32 ],
	[ 'WAX',     33 ],
	[ 'MWAX',    34 ],
	[ 'PSCN',    35 ],
	[ 'NSCN',    36 ],
	[ 'LNTG',    37 ],
	[ 'INSL',    38 ],
	[ 'BHOL',    39 ],
	[ 'WHOL',    40 ],
	[ 'RBDM',    41 ],
	[ 'LRBD',    42 ],
	[ 'NTCT',    43 ],
	[ 'SAND',    44 ],
	[ 'GLAS',    45 ],
	[ 'PTCT',    46 ],
	[ 'BGLA',    47 ],
	[ 'THDR',    48 ],
	[ 'PLSM',    49 ],
	[ 'ETRD',    50 ],
	[ 'NICE',    51 ],
	[ 'NBLE',    52 ],
	[ 'BTRY',    53 ],
	[ 'LCRY',    54 ],
	[ 'STKM',    55 ],
	[ 'SWCH',    56 ],
	[ 'SMKE',    57 ],
	[ 'DESL',    58 ],
	[ 'COAL',    59 ],
	[ 'LO2',     60 ],
	[ 'O2',      61 ],
	[ 'INWR',    62 ],
	[ 'YEST',    63 ],
	[ 'DYST',    64 ],
	[ 'THRM',    65 ],
	[ 'GLOW',    66 ],
	[ 'BRCK',    67 ],
	[ 'CFLM',    68 ],
	[ 'FIRW',    69 ],
	[ 'FUSE',    70 ],
	[ 'FSEP',    71 ],
	[ 'AMTR',    72 ],
	[ 'BCOL',    73 ],
	[ 'PCLN',    74 ],
	[ 'HSWC',    75 ],
	[ 'IRON',    76 ],
	[ 'MORT',    77 ],
	[ 'LIFE',    78 ],
	[ 'DLAY',    79 ],
	[ 'CO2',     80 ],
	[ 'DRIC',    81 ],
	[ 'CBNW',    82 ],
	[ 'STOR',    83 ],
	[ 'PVOD',    84 ],
	[ 'CONV',    85 ],
	[ 'CAUS',    86 ],
	[ 'LIGH',    87 ],
	[ 'TESC',    88 ],
	[ 'DEST',    89 ],
	[ 'SPNG',    90 ],
	[ 'RIME',    91 ],
	[ 'FOG',     92 ],
	[ 'BCLN',    93 ],
	[ 'LOVE',    94 ],
	[ 'DEUT',    95 ],
	[ 'WARP',    96 ],
	[ 'PUMP',    97 ],
	[ 'FWRK',    98 ],
	[ 'PIPE',    99 ],
	[ 'FRZZ',   100 ],
	[ 'FRZW',   101 ],
	[ 'GRAV',   102 ],
	[ 'BIZR',   103 ],
	[ 'BIZRG',  104 ],
	[ 'BIZRS',  105 ],
	[ 'INST',   106 ],
	[ 'ISOZ',   107 ],
	[ 'ISZS',   108 ],
	[ 'PRTI',   109 ],
	[ 'PRTO',   110 ],
	[ 'PSTE',   111 ],
	[ 'PSTS',   112 ],
	[ 'ANAR',   113 ],
	[ 'VINE',   114 ],
	[ 'INVIS',  115 ],
	[ 'E116',   116 ],
	[ 'SPAWN2', 117 ],
	[ 'SPAWN',  118 ],
	[ 'SHLD1',  119 ],
	[ 'SHLD2',  120 ],
	[ 'SHLD3',  121 ],
	[ 'SHLD4',  122 ],
	[ 'LOLZ',   123 ],
	[ 'WIFI',   124 ],
	[ 'FILT',   125 ],
	[ 'ARAY',   126 ],
	[ 'BRAY',   127 ],
	[ 'STKM2',  128 ],
	[ 'BOMB',   129 ],
	[ 'C5',     130 ],
	[ 'SING',   131 ],
	[ 'QRTZ',   132 ],
	[ 'PQRT',   133 ],
	[ 'EMP',    134 ],
	[ 'BREC',   135 ],
	[ 'ELEC',   136 ],
	[ 'ACEL',   137 ],
	[ 'DCEL',   138 ],
	[ 'BANG',   139 ],
	[ 'IGNT',   140 ],
	[ 'BOYL',   141 ],
	[ 'GEL',    142 ],
	[ 'TRON',   143 ],
	[ 'TTAN',   144 ],
	[ 'EXOT',   145 ],
	[ 'E146',   146 ],
	[ 'EMBR',   147 ],
	[ 'H2',     148 ],
	[ 'SOAP',   149 ],
	[ 'NBHL',   150 ],
	[ 'NWHL',   151 ],
	[ 'MERC',   152 ],
	[ 'PBCN',   153 ],
	[ 'GPMP',   154 ],
	[ 'CLST',   155 ],
	[ 'WIRE',   156 ],
	[ 'GBMB',   157 ],
	[ 'FIGH',   158 ],
	[ 'FRAY',   159 ],
	[ 'RPEL',   160 ],
	[ 'PPIP',   161 ],
	[ 'DTEC',   162 ],
	[ 'DMG',    163 ],
	[ 'TSNS',   164 ],
	[ 'VIBR',   165 ],
	[ 'BVBR',   166 ],
	[ 'CRAY',   167 ],
	[ 'PSTN',   168 ],
	[ 'FRME',   169 ],
	[ 'GOLD',   170 ],
	[ 'TUNG',   171 ],
	[ 'PSNS',   172 ],
	[ 'PROT',   173 ],
	[ 'VIRS',   174 ],
	[ 'VRSS',   175 ],
	[ 'VRSG',   176 ],
	[ 'GRVT',   177 ],
	[ 'DRAY',   178 ],
	[ 'CRMC',   179 ],
	[ 'HEAC',   180 ],
	[ 'SAWD',   181 ],
	[ 'POLO',   182 ],
	[ 'RFRG',   183 ],
	[ 'RFGL',   184 ],
	[ 'LSNS',   185 ],
	[ 'LDTC',   186 ],
	[ 'SLCN',   187 ],
	[ 'PTNM',   188 ],
	[ 'VSNS',   189 ],
	[ 'ROCK',   190 ],
	[ 'LITH',   191 ],

	['BCTR', MOD_ELEMENT_OFFSET + 0],
	['SUGR', MOD_ELEMENT_OFFSET + 1],
	['EXFN', MOD_ELEMENT_OFFSET + 2],
	['CYTK', MOD_ELEMENT_OFFSET + 3],
	['NPLM', MOD_ELEMENT_OFFSET + 4],
	['QLOG', MOD_ELEMENT_OFFSET + 5],
	['ION',  MOD_ELEMENT_OFFSET + 6],
	['NICH', MOD_ELEMENT_OFFSET + 7],
	['BALI', MOD_ELEMENT_OFFSET + 8],
	['MVSD', MOD_ELEMENT_OFFSET + 9],
	['STAR', MOD_ELEMENT_OFFSET + 10],
	['GLUE', MOD_ELEMENT_OFFSET + 11],
	['TPRS', MOD_ELEMENT_OFFSET + 12],
	['BOWR', MOD_ELEMENT_OFFSET + 13],
	['FREZ', MOD_ELEMENT_OFFSET + 14],
	['PGEL', MOD_ELEMENT_OFFSET + 15],
	['NOTE', MOD_ELEMENT_OFFSET + 16],
	['PDTC', MOD_ELEMENT_OFFSET + 17],
	['FFGN', MOD_ELEMENT_OFFSET + 18],
	['FFLD', MOD_ELEMENT_OFFSET + 19],
	['LASR', MOD_ELEMENT_OFFSET + 20],
	['COTR', MOD_ELEMENT_OFFSET + 21],
	['RADR', MOD_ELEMENT_OFFSET + 22],
	['NAVI', MOD_ELEMENT_OFFSET + 23],
	['THRS', MOD_ELEMENT_OFFSET + 24],
	['HULL', MOD_ELEMENT_OFFSET + 25],
	['TANK', MOD_ELEMENT_OFFSET + 26],
	['GNSH', MOD_ELEMENT_OFFSET + 27],
	['CRBN', MOD_ELEMENT_OFFSET + 28],
	['ANT', MOD_ELEMENT_OFFSET + 29],
	['BIRD', MOD_ELEMENT_OFFSET + 30],
	['RDMD', MOD_ELEMENT_OFFSET + 31],
	['NEON', MOD_ELEMENT_OFFSET + 32],
	['FISH', MOD_ELEMENT_OFFSET + 33],
	['SWTR', MOD_ELEMENT_OFFSET + 34],
	['SEED', MOD_ELEMENT_OFFSET + 35],
	['BLOD', MOD_ELEMENT_OFFSET + 36],
	['SOIL', MOD_ELEMENT_OFFSET + 37],
	['MUD', MOD_ELEMENT_OFFSET + 38],
	['BEE', MOD_ELEMENT_OFFSET + 39],
	['HONY', MOD_ELEMENT_OFFSET + 40],
	['SPDR', MOD_ELEMENT_OFFSET + 41],
	['BJEL', MOD_ELEMENT_OFFSET + 42],
	['SFLD', MOD_ELEMENT_OFFSET + 43],
	['CRNM', MOD_ELEMENT_OFFSET + 44],
	['DFLM', MOD_ELEMENT_OFFSET + 45],
	['WEB', MOD_ELEMENT_OFFSET + 46],
	['TIME', MOD_ELEMENT_OFFSET + 47],
	['CBMB', MOD_ELEMENT_OFFSET + 48],
	['CLUD', MOD_ELEMENT_OFFSET + 49],
	['MSSL', MOD_ELEMENT_OFFSET + 50],
	['JCB1', MOD_ELEMENT_OFFSET + 51],
	['TRBN', MOD_ELEMENT_OFFSET + 52],
	['FILL', MOD_ELEMENT_OFFSET + 53],
	['HAIR', MOD_ELEMENT_OFFSET + 54],
	['SHPO', MOD_ELEMENT_OFFSET + 55],
	['CMNT', MOD_ELEMENT_OFFSET + 56],
	['CMTP', MOD_ELEMENT_OFFSET + 57],
	['RCRT', MOD_ELEMENT_OFFSET + 58],
	['RCK',  MOD_ELEMENT_OFFSET + 59],
	['CESM', MOD_ELEMENT_OFFSET + 60],
	['MONY', MOD_ELEMENT_OFFSET + 61],
	['HOLY', MOD_ELEMENT_OFFSET + 62],
	['MGNT', MOD_ELEMENT_OFFSET + 63],
	['COPR', MOD_ELEMENT_OFFSET + 64],
	['ZINC', MOD_ELEMENT_OFFSET + 65],
	['RSPK', MOD_ELEMENT_OFFSET + 66],
	['MMSH', MOD_ELEMENT_OFFSET + 67],
	['IOSL', MOD_ELEMENT_OFFSET + 68],
	['RSTR', MOD_ELEMENT_OFFSET + 69],
	['LCSM', MOD_ELEMENT_OFFSET + 70],
	['VOLT', MOD_ELEMENT_OFFSET + 71],
	['JUNC', MOD_ELEMENT_OFFSET + 72],
	['GRND', MOD_ELEMENT_OFFSET + 73],
	['FIBR', MOD_ELEMENT_OFFSET + 74],
	['LEAD', MOD_ELEMENT_OFFSET + 75],
	['CAPR', MOD_ELEMENT_OFFSET + 76],
	['INDC', MOD_ELEMENT_OFFSET + 77],
	['BRAS', MOD_ELEMENT_OFFSET + 78],
	['AERO', MOD_ELEMENT_OFFSET + 79],
	['C6', MOD_ELEMENT_OFFSET + 80],
	['ERAY', MOD_ELEMENT_OFFSET + 81],
	['TIN', MOD_ELEMENT_OFFSET + 82],
	['LQUD', MOD_ELEMENT_OFFSET + 83],
	['PAPR', MOD_ELEMENT_OFFSET + 84],
	['DEBG', MOD_ELEMENT_OFFSET + 85],
	['PULP', MOD_ELEMENT_OFFSET + 86],
	['SHRD', MOD_ELEMENT_OFFSET + 87],
	['BRKN', MOD_ELEMENT_OFFSET + 88],
	['BSMH', MOD_ELEMENT_OFFSET + 89],
	['SICN', MOD_ELEMENT_OFFSET + 90],
	['TRFR', MOD_ELEMENT_OFFSET + 91],
	['FERO', MOD_ELEMENT_OFFSET + 92],
	['009', MOD_ELEMENT_OFFSET + 93],
	['PHSP', MOD_ELEMENT_OFFSET + 94],
	['ALMN', MOD_ELEMENT_OFFSET + 95],
	['ASPK', MOD_ELEMENT_OFFSET + 96],
	['PFLT', MOD_ELEMENT_OFFSET + 97],
	['BULT', MOD_ELEMENT_OFFSET + 98],
	['CSNS', MOD_ELEMENT_OFFSET + 99],
	['HELM', MOD_ELEMENT_OFFSET + 100],
	['RH2', MOD_ELEMENT_OFFSET + 101],
	['MILK', MOD_ELEMENT_OFFSET + 102],
	['UDDR', MOD_ELEMENT_OFFSET + 103],
	['FLSH', MOD_ELEMENT_OFFSET + 104],
	['STMH', MOD_ELEMENT_OFFSET + 105],
	['CLCM', MOD_ELEMENT_OFFSET + 106],
	['SUFR', MOD_ELEMENT_OFFSET + 107],
	['NTRI', MOD_ELEMENT_OFFSET + 108],
	['H2O2', MOD_ELEMENT_OFFSET + 109],
	['009S', MOD_ELEMENT_OFFSET + 110],
	['009G', MOD_ELEMENT_OFFSET + 111],
	['POTO', MOD_ELEMENT_OFFSET + 112],
	['ALGE', MOD_ELEMENT_OFFSET + 113],
	['ACOL', MOD_ELEMENT_OFFSET + 114],
	['BACL', MOD_ELEMENT_OFFSET + 115],
	['POSI', MOD_ELEMENT_OFFSET + 116],
	['ANH2', MOD_ELEMENT_OFFSET + 117],
	['TRUS', MOD_ELEMENT_OFFSET + 118],
	['APRT', MOD_ELEMENT_OFFSET + 119],
	['INDI', MOD_ELEMENT_OFFSET + 120],
	['VNGR', MOD_ELEMENT_OFFSET + 121],
	['BAKS', MOD_ELEMENT_OFFSET + 122],
	['FOAM', MOD_ELEMENT_OFFSET + 123],
	['THOR', MOD_ELEMENT_OFFSET + 124],
	['FUSN', MOD_ELEMENT_OFFSET + 125],
	['PINV', MOD_ELEMENT_OFFSET + 126],
	['VACC', MOD_ELEMENT_OFFSET + 127],
	['TRST', MOD_ELEMENT_OFFSET + 128],
	['LOGC', MOD_ELEMENT_OFFSET + 129],
	['TLNE', MOD_ELEMENT_OFFSET + 130],
	['HRSE', MOD_ELEMENT_OFFSET + 131],
	['TMRM', MOD_ELEMENT_OFFSET + 132],
	['FLRN', MOD_ELEMENT_OFFSET + 133],
	['IRDM', MOD_ELEMENT_OFFSET + 134],
	['AQRG', MOD_ELEMENT_OFFSET + 135],
	['BRNZ', MOD_ELEMENT_OFFSET + 136],
	['ETHN', MOD_ELEMENT_OFFSET + 137],
	['RADN', MOD_ELEMENT_OFFSET + 138],
	['CLTH', MOD_ELEMENT_OFFSET + 139],
	['N2',   MOD_ELEMENT_OFFSET + 140],
	['AMNA', MOD_ELEMENT_OFFSET + 141]
]

simulation_elem_src = []
foreach elem_name_id : simulation_elem_ids
	simulation_elem_src += elem_name_id[0] + '.cpp'
endforeach
simulation_files += files(simulation_elem_src)
